--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head> 
 <meta charset="utf-8"> 
-<title>菜鸟教程(runoob.com)</title> 
+<title>TEST</title> 
 </head>
 <body>
 	
-<h1>我的 Web 页面</h1>
-<p id="demo">一个段落。</p>
-<button type="button" onclick="myFunction()">点击这里</button>
-<p><b>注释：</b>myFunction 保存在名为 "myScript.js" 的外部文件中。</p>
+<h1>我的 Web </h1>
+<p id="demo">一落。</p>
+<button type="button" onclick="myFunction()">click here</button>
+
 <script src="/myScript.js"></script>
 	
 </body>
