--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
 <button type="button" onclick="myFunction()">click here</button>
 
 <script src="/myScript.js"></script>
+<h2>JavaScript new Date()</h2>
+
+<p id="demo"></p>
+
+<script>
+var d = new Date();
+document.getElementById("demo").innerHTML = d;
+</script>
+	
+	
+	
+	
 	
 </body>
 </html>
+<script language="JavaScript">
+function myrefresh()
+{
+window.location.reload();
+}
+setTimeout('myrefresh()',1000); //指定1秒刷新一次
+</script>
