--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head> 
+	
 <meta charset="utf-8"> 
+<meta http-equiv="refresh" content="1">	
 <title>TEST</title> 
 </head>
 <body>
@@ -20,16 +22,6 @@ var d = new Date();
 document.getElementById("demo").innerHTML = d;
 </script>
 	
-	
-	
-	
-	
 </body>
 </html>
-<script language="JavaScript">
-function myrefresh()
-{
-window.location.reload();
-}
-setTimeout('myrefresh()',1000); //指定1秒刷新一次
-</script>
+
